[gd_scene load_steps=2 format=2]

[ext_resource path="res://Nodes/Divert.gd" type="Script" id=1]

[node name="Divert node" type="GraphNode"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -749.0
margin_bottom = 87.0
rect_min_size = Vector2( 275, 387 )
size_flags_stretch_ratio = 0.0
custom_constants/port_offset = 0
title = "Divert"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 0.67451, 0.933333, 0.580392, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color( 0.956863, 0.639216, 0.639216, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Firstrepeat" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 24.0
margin_right = 259.0
margin_bottom = 48.0

[node name="First" type="HBoxContainer" parent="Firstrepeat"]
margin_right = 119.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="First label" type="Label" parent="Firstrepeat/First"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "First"

[node name="First checkbox" type="CheckBox" parent="Firstrepeat/First"]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Repeat" type="HBoxContainer" parent="Firstrepeat"]
margin_left = 123.0
margin_right = 243.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Repeat label" type="Label" parent="Firstrepeat/Repeat"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 19.0
text = "Repeat"

[node name="Repeat checkbox" type="CheckBox" parent="Firstrepeat/Repeat"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Separator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 259.0
margin_bottom = 52.0

[node name="True container" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 53.0
margin_right = 259.0
margin_bottom = 84.01
rect_min_size = Vector2( 0, 31.01 )
alignment = 2

[node name="True label" type="Label" parent="True container"]
margin_left = 215.0
margin_top = 8.0
margin_right = 243.0
margin_bottom = 22.0
text = "True"
align = 2

[node name="False container" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 85.0
margin_right = 259.0
margin_bottom = 116.01
rect_min_size = Vector2( 0, 31.01 )
alignment = 2

[node name="False label" type="Label" parent="False container"]
margin_left = 210.0
margin_top = 8.0
margin_right = 243.0
margin_bottom = 22.0
text = "False"
align = 2

[node name="ID label" type="Label" parent="."]
margin_left = 16.0
margin_top = 117.0
margin_right = 259.0
margin_bottom = 131.0
text = "ID"

[node name="ID text" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 132.0
margin_right = 259.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 30 )

[node name="All" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 163.0
margin_right = 259.0
margin_bottom = 367.0

[node name="Condition label" type="Label" parent="All"]
margin_right = 243.0
margin_bottom = 14.0
text = "Condition"

[node name="Condition" type="OptionButton" parent="All"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )

[node name="Dictionary label" type="Label" parent="All"]
margin_top = 52.0
margin_right = 243.0
margin_bottom = 66.0
text = "Dictionary"

[node name="Dictionary text" type="TextEdit" parent="All"]
margin_top = 70.0
margin_right = 243.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 30 )

[node name="Variable label" type="Label" parent="All"]
margin_top = 104.0
margin_right = 243.0
margin_bottom = 118.0
text = "Variable"

[node name="Variable text" type="TextEdit" parent="All"]
margin_top = 122.0
margin_right = 243.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 30 )

[node name="Value label" type="Label" parent="All"]
margin_top = 156.0
margin_right = 243.0
margin_bottom = 170.0
text = "Value"

[node name="Value text" type="TextEdit" parent="All"]
margin_top = 174.0
margin_right = 243.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
wrap_enabled = true

[connection signal="close_request" from="." to="." method="_on_Divert_node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Divert_node_resize_request"]
[connection signal="resized" from="." to="." method="_on_Divert_node_resized"]
[connection signal="pressed" from="Firstrepeat/First/First checkbox" to="." method="_on_First_checkbox_pressed"]
[connection signal="pressed" from="Firstrepeat/Repeat/Repeat checkbox" to="." method="_on_Repeat_checkBox_pressed"]
[connection signal="text_changed" from="ID text" to="." method="_on_ID_text_text_changed"]
[connection signal="item_selected" from="All/Condition" to="." method="_on_Condition_item_selected"]
[connection signal="text_changed" from="All/Dictionary text" to="." method="_on_Dictionary_text_text_changed"]
[connection signal="text_changed" from="All/Variable text" to="." method="_on_Variable_text_text_changed"]
[connection signal="text_changed" from="All/Value text" to="." method="_on_Value_text_text_changed"]
